<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2018 Florian Dreier
  ~
  ~ This file is part of MyTargets.
  ~
  ~ MyTargets is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License version 2
  ~ as published by the Free Software Foundation.
  ~
  ~ MyTargets is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/fab2"
        android:icon="@drawable/fab_album_24dp"
        android:orderInCategory="0"
        android:title="@string/training_with_standard_round"/>
    <item
        android:id="@+id/fab1"
        android:icon="@drawable/fab_trending_up_white_24dp"
        android:orderInCategory="1"
        android:title="@string/free_training"/>

</menu>
